--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
           token: ${{ steps.generate_token.outputs.token }}
           repo: demo-mixed-ci-private
           title: CheckPublicPR
-          body: ${{ github.sha }}
+          body: refs/pull/${{ github.event.pull_request.number }}/merge
 
 #ToDo:
 # on the rebuild! comment, there's an issue with the sha pointing to something other than pr/merge,
